--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -10,6 +10,10 @@
     position: absolute;
     bottom: 0;
     left: 5%;
+    @media(min-width:680px){
+      width: 100%;
+      left: 0;
+    }
   }
 }
 @mixin lineBottomTable{
